<resources>
    <string name="app_name" translatable="false">Unfollowers</string>
    <string name="app_name_subtitle">by Ollie</string>
    <string name="login_to_ig">Log in with Instagram</string>
    <string name="log_in">Log in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_empty_field">This field is required</string>
    <string name="action_settings">Settings</string>
    <string name="action_log_out">Log out</string>
    <string name="error_getting_account">Sorry, there was an error adding %1$s. Perhaps that user doesn\'t exist?</string>
    <string name="action_help">Help</string>
    <string name="dev_email" translatable="false">olliechick@gmail.com</string>
    <string name="no_accounts">You haven\'t added any accounts! Click the + button to add an account.</string>
    <string name="no_unfollowers">No one has unfollowed you since you added this account.</string>
    <string name="account_format">%1$s (%2$s)</string>
    <string name="accounts">Accounts</string>
    <string name="added">Added %1$s</string>
    <string name="add_account">Add an account:</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="just_unfollowed_you">%1$s (%2$s) just unfollowed you!</string>
    <string name="tap_to_go_to_profile">Tap here to go to their profile.</string>
    <string name="logging_in">Logging in…</string>
    <string name="loading">Loading…</string>
    <string name="settings">Settings</string>
    <string name="new_unfollowers">New unfollowers</string>
    <string name="logging_in_to">Logging in to %1$s…</string>
    <string name="username_and_password_broken">Your username and password for %1$s no longer work :(</string>
    <string name="refresh_already">Refresh already in progress…</string>
    <string name="refreshing">Refreshing…</string>
    <string name="done">Done!</string>
    <string name="db_error">There was an error with the database when attempting to save a new set of followers.\\n\\nError details:\\n\\n%1$s\\n\\n%2$s</string>
    <string name="email_subject" translatable="false">encountered an error [auto-generated email]</string>
    <string name="enter_a_username">Enter a username…</string>
    <string name="automatically_check">Automatically check for new unfollowers</string>
    <string name="enable_auto_refresh">Enable auto-refresh</string>
    <string name="refresh_startup">Refresh on startup</string>
    <string name="support">Support</string>
    <string name="report_issues">Report technical issues or suggest new features</string>
    <string name="send_feedback">Send feedback</string>
    <string name="auto_refresh">Auto-refresh</string>
    <string name="refresh_rate">Refresh rate</string>
    <string name="username_invalid">Sorry, but \"%1$s\" is not a valid username. Valid usernames only contain letters, numbers, underscores, and periods.</string>
    <string name="adding_username">Adding %1$s…</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="send_to_devs">Do you want to send the details to the developers?</string>
    <string name="send">Send</string>
    <string name="internet_issue">Internet connectivity issue</string>
    <string name="please_connect">Please connect to the internet and try again.</string>
    <string name="retry">Retry</string>
    <string name="dismiss">Dismiss</string>
    <string name="close_app">Close app</string>
    <string name="are_you_sure_add">Are you sure you want to add %1$s (%2$s)?</string>
    <string name="large_follower_warning">That account has %1$s followers so it could take around %2$s to refresh unfollowers.</string>
    <string name="username_already_added">You\'ve already added %1$s!</string>
    <string name="action_delete">Delete</string>
    <string name="confirm_deletion">Are you sure you want to delete %1$s?</string>
    <plurals name="second">
        <item quantity="one">%d second</item>
        <item quantity="other">%d seconds</item>
    </plurals>
    <plurals name="minute">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="hour">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="day">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="thousand">
        <item quantity="one">%d thousand</item>
        <item quantity="other">%d thousand</item>
    </plurals>
    <plurals name="million">
        <item quantity="one">%d million</item>
        <item quantity="other">%d million</item>
    </plurals>
</resources>
