<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <PreferenceCategory
        app:key="auto_refresh_category"
        app:title="@string/auto_refresh">

        <SwitchPreferenceCompat
            app:key="auto_refresh"
            app:summary="@string/automatically_check"
            app:title="@string/enable_auto_refresh" />

        <ListPreference
            android:id="@+id/refresh_rate_list"
            app:dependency="auto_refresh"
            app:entries="@array/interval"
            app:entryValues="@array/intervalAlias"
            app:key="refresh_rate"
            app:title="@string/refresh_rate" />

        <SwitchPreferenceCompat
            app:dependency="auto_refresh"
            app:key="refresh_on_startup"
            app:title="@string/refresh_startup" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="support"
        app:title="@string/support">

        <Preference
            app:key="feedback"
            app:summary="@string/report_issues"
            app:title="@string/send_feedback" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>