<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:title="@string/action_help"
        android:icon="@drawable/ic_help_outline_white_24dp"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_log_out"
        android:title="@string/action_log_out"
        app:showAsAction="never" />
    <!--android:icon="@drawable/settings_48dp" todo get an icon-->
</menu>