<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InstagramAuthoriseActivity">
    <TextView
            android:text="@string/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/usernameField" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.5" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/usernameField"/>
    <TextView
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/passwordField" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.5" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/passwordField"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/usernameField"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.5" android:autofillHints="@string/username"
            android:hint="@string/username" app:layout_constraintBottom_toTopOf="@+id/passwordField"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.0"
            android:layout_marginTop="32dp" android:text="olliechickdev"/>
    <Button
            android:text="@string/log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logInButton" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordField" app:layout_constraintVertical_bias="0.050000012"
            android:onClick="logIn"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordField"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/usernameField" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.5" android:autofillHints="@string/password"
            android:hint="@string/password" android:text="olliechicknz"/>
    <ListView
            android:layout_width="395dp"
            android:layout_height="496dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/logInButton" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:id="@+id/listView"/>
</android.support.constraint.ConstraintLayout>